--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\..\\..\\Desktop\\LIB\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\..\\..\\Desktop\\LIB\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=..\\..\\..\\Desktop\\LIB\\jaxb-api-2.1.jar
+file.reference.mysql-connector-j-9.3.0.jar=..\\..\\..\\Desktop\\LIB\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 file.reference.sqljdbc42.jar=..\\..\\..\\Desktop\\LIB\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -42,7 +43,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
