--- a/Product_Management/web/WEB-INF/web.xml
+++ b/Product_Management/web/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <servlet>
         <servlet-name>CategoryServlet</servlet-name>
-        <servlet-class>controller.CategoryServlet</servlet-class>
+        <servlet-class>controller.CategoryController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>CategoryServlet</servlet-name>
