--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,12 +25,13 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\..\\..\\Desktop\\LIB\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\..\\..\\Desktop\\LIB\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=..\\..\\..\\Desktop\\LIB\\jaxb-api-2.1.jar
-file.reference.mysql-connector-j-9.3.0.jar=..\\..\\..\\Desktop\\LIB\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
-file.reference.sqljdbc42.jar=..\\..\\..\\Desktop\\LIB\\sqljdbc42.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../../../Desktop/Code/LIB/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../../../Desktop/Code/LIB/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=../../../Desktop/Code/LIB/jaxb-api-2.1.jar
+file.reference.mysql-connector-j-9.3.0.jar=../../../Desktop/Code/LIB/mysql-connector-j-9.3.0.jar
+file.reference.sqljdbc42.jar=../../../Desktop/Code/LIB/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,8 +44,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,7 +72,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
