--- a/ShoppingFeatures/build.xml
+++ b/ShoppingFeatures/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="ShoppingFeatures" default="default" basedir=".">
-    <description>Builds, tests, and runs the project ShoppingFeatures.</description>
+<project name="Project_G2" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Project_G2.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
