--- a/ShoppingFeatures/nbproject/project.properties
+++ b/ShoppingFeatures/nbproject/project.properties
@@ -27,15 +27,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.gson-2.10.1.jar=lib/gson-2.10.1.jar
-file.reference.jackson-databind-2.10.0.jar=lib/jackson-databind-2.10.0.jar
-file.reference.jakarta.activation-2.0.1.jar=lib/jakarta.activation-2.0.1.jar
-file.reference.jakarta.mail-2.0.1.jar=lib/jakarta.mail-2.0.1.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=lib/jaxb-api-2.1.jar
-file.reference.lombok-1.18.30.jar=lib/lombok-1.18.30.jar
-file.reference.mysql-connector-java-8.0.30.jar=lib/mysql-connector-java-8.0.30.jar
+file.reference.gson-2.10.1.jar=lib\\gson-2.10.1.jar
+file.reference.jackson-databind-2.10.0.jar=lib\\jackson-databind-2.10.0.jar
+file.reference.jakarta.activation-2.0.1.jar=lib\\jakarta.activation-2.0.1.jar
+file.reference.jakarta.mail-2.0.1.jar=lib\\jakarta.mail-2.0.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=lib\\jaxb-api-2.1.jar
+file.reference.lombok-1.18.30.jar=lib\\lombok-1.18.30.jar
+file.reference.mysql-connector-java-8.0.30.jar=lib\\mysql-connector-java-8.0.30.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -95,6 +95,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=ShoppingFeatures.war
+war.name=Project_G2.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
