--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,61 @@ nb-configuration.xml
 *.jar
 *.war
 *.ear
+*.zip
+*.tar.gz
+*.rar
 
 # IDE specific files #
 .settings/
 .project
 .classpath
+.idea/
+*.iml
+*.iws
+.idea_modules/
+out/
 
 # Dependencies #
-lib/ 
+lib/
+target/
+node_modules/
+
+# Logs and databases #
+*.log
+*.sql
+*.sqlite
+*.db
+
+# OS generated files #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Maven #
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Compiled files #
+*.com
+*.dll
+*.exe
+*.o
+*.so
+
+# Temporary files #
+*.swp
+*.swo
+*~
+*.tmp
+*.bak 
