--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\..\\..\\Desktop\\Code\\LIB
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\..\\..\\Desktop\\Code\\LIB\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=..\\..\\..\\Desktop\\Code\\LIB\\jaxb-api-2.1.jar
 file.reference.mysql-connector-j-9.3.0.jar=..\\..\\..\\Desktop\\Code\\LIB\\mysql-connector-j-9.3.0.jar
+file.reference.mysql-connector-j-9.3.0.jar-1=D:\\FPTU\\6_Summer25\\3_SWP391\\JAR file\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 file.reference.sqljdbc42.jar=..\\..\\..\\Desktop\\Code\\LIB\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
