--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,5 @@ file.reference.mysql-connector-j-9.3.0.jar=D:\\FPTU\\5_Spring25\\PRJ301\\allowed
 file.reference.sqljdbc42.jar=D:\\FPTU\\5_Spring25\\PRJ301\\allowedlib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
+selected.browser=Chrome
 user.properties.file=C:\\Users\\fpt shop\\AppData\\Roaming\\NetBeans\\17\\build.properties
