--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,18 +25,8 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
-endorsed.classpath=
 excludes=
 
-file.reference.jakarta.activation-2.0.1.jar=..\\..\\..\\..\\Desktop\\Code\\LIB\\jakarta.activation-2.0.1.jar
-file.reference.jakarta.mail-2.0.1.jar=..\\..\\..\\..\\Desktop\\Code\\LIB\\jakarta.mail-2.0.1.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\..\\..\\..\\Desktop\\Code\\LIB\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\..\\..\\..\\Desktop\\Code\\LIB\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.servlet-api-4.0.1.jar=..\\..\\..\\..\\Desktop\\Code\\LIB\\javax.servlet-api-4.0.1.jar
-file.reference.jaxb-api-2.1.jar=..\\..\\..\\..\\Desktop\\Code\\LIB\\jaxb-api-2.1.jar
-file.reference.jbcrypt-0.4.jar=..\\..\\..\\..\\Desktop\\Code\\LIB\\jbcrypt-0.4.jar
-file.reference.mysql-connector-j-9.3.0.jar=..\\..\\..\\..\\Desktop\\Code\\LIB\\mysql-connector-j-9.3.0.jar
-file.reference.sqljdbc42.jar=..\\..\\..\\..\\Desktop\\Code\\LIB\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,15 +36,12 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.activation-2.0.1.jar}:\
-    ${file.reference.jakarta.mail-2.0.1.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.javax.servlet-api-4.0.1.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.jbcrypt-0.4.jar}:\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -81,6 +68,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
