--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,8 +25,20 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 
+file.reference.gson-2.10.1.jar=libs/gson-2.10.1.jar
+file.reference.jackson-databind-2.10.0.jar=libs/jackson-databind-2.10.0.jar
+file.reference.jakarta.activation-2.0.1.jar=libs/jakarta.activation-2.0.1.jar
+file.reference.jakarta.mail-2.0.1.jar=libs/jakarta.mail-2.0.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=libs/jaxb-api-2.1.jar
+file.reference.lombok-1.18.30.jar=libs/lombok-1.18.30.jar
+file.reference.mssql-jdbc-12.4.2.jre11.jar=libs/mssql-jdbc-12.4.2.jre11.jar
+file.reference.mysql-connector-java-8.0.30.jar=libs/mysql-connector-java-8.0.30.jar
+file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar=libs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -36,12 +48,17 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.jackson-databind-2.10.0.jar}:\
+    ${file.reference.jakarta.activation-2.0.1.jar}:\
+    ${file.reference.jakarta.mail-2.0.1.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar-1}
+    ${file.reference.lombok-1.18.30.jar}:\
+    ${file.reference.mssql-jdbc-12.4.2.jre11.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,7 +85,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
