--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,7 @@ file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs/jakarta.servlet.jsp.j
 file.reference.jaxb-api-2.1.jar=libs/jaxb-api-2.1.jar
 file.reference.lombok-1.18.30.jar=libs/lombok-1.18.30.jar
 file.reference.mssql-jdbc-12.4.2.jre11.jar=libs/mssql-jdbc-12.4.2.jre11.jar
-file.reference.mysql-connector-java-8.0.30.jar=libs/mysql-connector-java-8.0.30.jar
+file.reference.mysql-connector-j-9.3.0.jar=libs/mysql-connector-j-9.3.0.jar
 file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar=libs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 includes=**
 j2ee.compile.on.save=true
@@ -57,7 +57,7 @@ javac.classpath=\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.lombok-1.18.30.jar}:\
     ${file.reference.mssql-jdbc-12.4.2.jre11.jar}:\
-    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
     ${file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
