--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -43,4 +43,9 @@
     <welcome-file-list>
         <welcome-file>homepageservlet</welcome-file>
     </welcome-file-list>
+    
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error.jsp</location>
+    </error-page>
 </web-app>
