--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>CPUCategoryServlet</servlet-name>
         <servlet-class>controller.CPUCategoryServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GPUCategoryServlet</servlet-name>
+        <servlet-class>controller.GPUCategoryServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>CPUCategoryServlet</servlet-name>
         <url-pattern>/CPUCategoryServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GPUCategoryServlet</servlet-name>
+        <url-pattern>/GPUCategoryServlet</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>homepageservlet</welcome-file>
