--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>GPUCategoryServlet</servlet-name>
         <servlet-class>controller.GPUCategoryServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RAMCategoryServlet</servlet-name>
+        <servlet-class>controller.RAMCategoryServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -55,6 +59,10 @@
     <servlet-mapping>
         <servlet-name>GPUCategoryServlet</servlet-name>
         <url-pattern>/GPUCategoryServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RAMCategoryServlet</servlet-name>
+        <url-pattern>/RAMCategoryServlet</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>homepageservlet</welcome-file>
