--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.jakarta.servlet-api-4.0.4.jar=libs\\jakarta.servlet-api-4.0.4.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=libs\\jaxb-api-2.1.jar
+file.reference.jsoup-1.16.1.jar=libs\\jsoup-1.16.1.jar
 file.reference.lombok-1.18.30.jar=libs\\lombok-1.18.30.jar
 file.reference.mssql-jdbc-12.4.2.jre11.jar=libs\\mssql-jdbc-12.4.2.jre11.jar
 file.reference.mysql-connector-j-9.3.0.jar=libs\\mysql-connector-j-9.3.0.jar
@@ -73,7 +74,8 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-12.4.2.jre11.jar}:\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
     ${file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar}:\
-    ${file.reference.spring-security-crypto-5.8.5.jar}
+    ${file.reference.spring-security-crypto-5.8.5.jar}:\
+    ${file.reference.jsoup-1.16.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
