--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>RAMCategoryServlet</servlet-name>
         <servlet-class>controller.RAMCategoryServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PCBuilderServlet</servlet-name>
+        <servlet-class>controller.PCBuilderServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -63,6 +67,10 @@
     <servlet-mapping>
         <servlet-name>RAMCategoryServlet</servlet-name>
         <url-pattern>/RAMCategoryServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PCBuilderServlet</servlet-name>
+        <url-pattern>/PCBuilderServlet</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>homepageservlet</welcome-file>
