--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,6 +36,14 @@
         <servlet-name>PCBuilderServlet</servlet-name>
         <servlet-class>controller.PCBuilderServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MenuAttributeManagementServlet</servlet-name>
+        <servlet-class>controller.MenuAttributeManagementServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>MenuAttributeValueManagementServlet</servlet-name>
+        <servlet-class>controller.MenuAttributeValueManagementServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -71,6 +79,14 @@
     <servlet-mapping>
         <servlet-name>PCBuilderServlet</servlet-name>
         <url-pattern>/PCBuilderServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MenuAttributeManagementServlet</servlet-name>
+        <url-pattern>/menuAttributeManagement</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MenuAttributeValueManagementServlet</servlet-name>
+        <url-pattern>/menuAttributeValueManagement</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>homepageservlet</welcome-file>
