--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,23 +28,37 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 
-file.reference.gson-2.10.1.jar=libs\\gson-2.10.1.jar
-file.reference.jackson-databind-2.10.0.jar=libs\\jackson-databind-2.10.0.jar
-file.reference.jakarta.activation-2.0.1.jar=libs\\jakarta.activation-2.0.1.jar
-file.reference.jakarta.mail-2.0.1.jar=libs\\jakarta.mail-2.0.1.jar
-file.reference.jakarta.servlet-api-4.0.4.jar=libs\\jakarta.servlet-api-4.0.4.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=libs\\jaxb-api-2.1.jar
-file.reference.jjwt-api-0.12.3.jar=libs\\jjwt-api-0.12.3.jar
-file.reference.jjwt-impl-0.12.3.jar=libs\\jjwt-impl-0.12.3.jar
-file.reference.jjwt-jackson-0.12.3.jar=libs\\jjwt-jackson-0.12.3.jar
-file.reference.jsoup-1.16.1.jar=libs\\jsoup-1.16.1.jar
-file.reference.lombok-1.18.30.jar=libs\\lombok-1.18.30.jar
-file.reference.mssql-jdbc-12.4.2.jre11.jar=libs\\mssql-jdbc-12.4.2.jre11.jar
-file.reference.mysql-connector-j-9.3.0.jar=libs\\mysql-connector-j-9.3.0.jar
-file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar=libs\\org-netbeans-modules-java-j2seproject-copylibstask.jar
-file.reference.spring-security-crypto-5.8.5.jar=libs\\spring-security-crypto-5.8.5.jar
+file.reference.commons-codec-1.15.jar=libs/commons-codec-1.15.jar
+file.reference.commons-collections4-4.4.jar=libs/commons-collections4-4.4.jar
+file.reference.commons-io-2.11.0.jar=libs/commons-io-2.11.0.jar
+file.reference.commons-math3-3.6.1.jar=libs/commons-math3-3.6.1.jar
+file.reference.gson-2.10.1.jar=libs/gson-2.10.1.jar
+file.reference.jackson-databind-2.10.0.jar=libs/jackson-databind-2.10.0.jar
+file.reference.jakarta.activation-2.0.1.jar=libs/jakarta.activation-2.0.1.jar
+file.reference.jakarta.mail-2.0.1.jar=libs/jakarta.mail-2.0.1.jar
+file.reference.jakarta.servlet-api-4.0.4.jar=libs/jakarta.servlet-api-4.0.4.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=libs/jaxb-api-2.1.jar
+file.reference.jjwt-api-0.12.3.jar=libs/jjwt-api-0.12.3.jar
+file.reference.jjwt-impl-0.12.3.jar=libs/jjwt-impl-0.12.3.jar
+file.reference.jjwt-jackson-0.12.3.jar=libs/jjwt-jackson-0.12.3.jar
+file.reference.jsoup-1.16.1.jar=libs/jsoup-1.16.1.jar
+file.reference.log4j-api-2.18.0.jar=libs/log4j-api-2.18.0.jar
+file.reference.lombok-1.18.30.jar=libs/lombok-1.18.30.jar
+file.reference.mssql-jdbc-12.4.2.jre11.jar=libs/mssql-jdbc-12.4.2.jre11.jar
+file.reference.mysql-connector-j-9.3.0.jar=libs/mysql-connector-j-9.3.0.jar
+file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar=libs/org-netbeans-modules-java-j2seproject-copylibstask.jar
+file.reference.poi-5.2.3.jar=libs/poi-5.2.3.jar
+file.reference.poi-examples-5.2.3.jar=libs/poi-examples-5.2.3.jar
+file.reference.poi-excelant-5.2.3.jar=libs/poi-excelant-5.2.3.jar
+file.reference.poi-javadoc-5.2.3.jar=libs/poi-javadoc-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar=libs/poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-full-5.2.3.jar=libs/poi-ooxml-full-5.2.3.jar
+file.reference.poi-ooxml-lite-5.2.3.jar=libs/poi-ooxml-lite-5.2.3.jar
+file.reference.poi-scratchpad-5.2.3.jar=libs/poi-scratchpad-5.2.3.jar
+file.reference.SparseBitSet-1.2.jar=libs/SparseBitSet-1.2.jar
+file.reference.spring-security-crypto-5.8.5.jar=libs/spring-security-crypto-5.8.5.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -69,17 +83,11 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.10.1.jar}:\
-    ${file.reference.jackson-databind-2.10.0.jar}:\
-    ${file.reference.jakarta.activation-2.0.1.jar}:\
-    ${file.reference.jakarta.mail-2.0.1.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.lombok-1.18.30.jar}:\
-    ${file.reference.mssql-jdbc-12.4.2.jre11.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}:\
-    ${file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
     ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.jackson-databind-2.10.0.jar}:\
     ${file.reference.jakarta.activation-2.0.1.jar}:\
@@ -88,15 +96,24 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.jjwt-api-0.12.3.jar}:\
+    ${file.reference.jjwt-impl-0.12.3.jar}:\
+    ${file.reference.jjwt-jackson-0.12.3.jar}:\
+    ${file.reference.jsoup-1.16.1.jar}:\
+    ${file.reference.log4j-api-2.18.0.jar}:\
     ${file.reference.lombok-1.18.30.jar}:\
     ${file.reference.mssql-jdbc-12.4.2.jre11.jar}:\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
     ${file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar}:\
-    ${file.reference.spring-security-crypto-5.8.5.jar}:\
-    ${file.reference.jsoup-1.16.1.jar}:\
-    ${file.reference.jjwt-api-0.12.3.jar}:\
-    ${file.reference.jjwt-impl-0.12.3.jar}:\
-    ${file.reference.jjwt-jackson-0.12.3.jar}
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.poi-examples-5.2.3.jar}:\
+    ${file.reference.poi-excelant-5.2.3.jar}:\
+    ${file.reference.poi-javadoc-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-lite-5.2.3.jar}:\
+    ${file.reference.poi-scratchpad-5.2.3.jar}:\
+    ${file.reference.spring-security-crypto-5.8.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
