--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,37 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 
+file.reference.batik-anim-1.14.jar=libs/batik-anim-1.14.jar
+file.reference.batik-awt-util-1.14.jar=libs/batik-awt-util-1.14.jar
+file.reference.batik-bridge-1.14.jar=libs/batik-bridge-1.14.jar
+file.reference.batik-codec-1.14.jar=libs/batik-codec-1.14.jar
+file.reference.batik-constants-1.14.jar=libs/batik-constants-1.14.jar
+file.reference.batik-css-1.14.jar=libs/batik-css-1.14.jar
+file.reference.batik-dom-1.14.jar=libs/batik-dom-1.14.jar
+file.reference.batik-ext-1.14.jar=libs/batik-ext-1.14.jar
+file.reference.batik-gvt-1.14.jar=libs/batik-gvt-1.14.jar
+file.reference.batik-i18n-1.14.jar=libs/batik-i18n-1.14.jar
+file.reference.batik-parser-1.14.jar=libs/batik-parser-1.14.jar
+file.reference.batik-script-1.14.jar=libs/batik-script-1.14.jar
+file.reference.batik-shared-resources-1.14.jar=libs/batik-shared-resources-1.14.jar
+file.reference.batik-svg-dom-1.14.jar=libs/batik-svg-dom-1.14.jar
+file.reference.batik-svggen-1.14.jar=libs/batik-svggen-1.14.jar
+file.reference.batik-svgrasterizer-1.14.jar=libs/batik-svgrasterizer-1.14.jar
+file.reference.batik-transcoder-1.14.jar=libs/batik-transcoder-1.14.jar
+file.reference.batik-util-1.14.jar=libs/batik-util-1.14.jar
+file.reference.batik-xml-1.14.jar=libs/batik-xml-1.14.jar
+file.reference.bcpkix-jdk15on-1.70.jar=libs/bcpkix-jdk15on-1.70.jar
+file.reference.bcprov-jdk15on-1.70.jar=libs/bcprov-jdk15on-1.70.jar
+file.reference.bcutil-jdk15on-1.70.jar=libs/bcutil-jdk15on-1.70.jar
 file.reference.commons-codec-1.15.jar=libs/commons-codec-1.15.jar
 file.reference.commons-collections4-4.4.jar=libs/commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=libs/commons-compress-1.21.jar
 file.reference.commons-io-2.11.0.jar=libs/commons-io-2.11.0.jar
+file.reference.commons-logging-1.2.jar=libs/commons-logging-1.2.jar
 file.reference.commons-math3-3.6.1.jar=libs/commons-math3-3.6.1.jar
+file.reference.curvesapi-1.07.jar=libs/curvesapi-1.07.jar
+file.reference.fontbox-2.0.26.jar=libs/fontbox-2.0.26.jar
+file.reference.graphics2d-0.40.jar=libs/graphics2d-0.40.jar
 file.reference.gson-2.10.1.jar=libs/gson-2.10.1.jar
 file.reference.jackson-databind-2.10.0.jar=libs/jackson-databind-2.10.0.jar
 file.reference.jakarta.activation-2.0.1.jar=libs/jakarta.activation-2.0.1.jar
@@ -39,6 +66,7 @@ file.reference.jakarta.mail-2.0.1.jar=libs/jakarta.mail-2.0.1.jar
 file.reference.jakarta.servlet-api-4.0.4.jar=libs/jakarta.servlet-api-4.0.4.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.xml.bind-api-3.0.1.jar=libs/jakarta.xml.bind-api-3.0.1.jar
 file.reference.jaxb-api-2.1.jar=libs/jaxb-api-2.1.jar
 file.reference.jjwt-api-0.12.3.jar=libs/jjwt-api-0.12.3.jar
 file.reference.jjwt-impl-0.12.3.jar=libs/jjwt-impl-0.12.3.jar
@@ -49,6 +77,7 @@ file.reference.lombok-1.18.30.jar=libs/lombok-1.18.30.jar
 file.reference.mssql-jdbc-12.4.2.jre11.jar=libs/mssql-jdbc-12.4.2.jre11.jar
 file.reference.mysql-connector-j-9.3.0.jar=libs/mysql-connector-j-9.3.0.jar
 file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar=libs/org-netbeans-modules-java-j2seproject-copylibstask.jar
+file.reference.pdfbox-2.0.26.jar=libs/pdfbox-2.0.26.jar
 file.reference.poi-5.2.3.jar=libs/poi-5.2.3.jar
 file.reference.poi-examples-5.2.3.jar=libs/poi-examples-5.2.3.jar
 file.reference.poi-excelant-5.2.3.jar=libs/poi-excelant-5.2.3.jar
@@ -57,22 +86,55 @@ file.reference.poi-ooxml-5.2.3.jar=libs/poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-full-5.2.3.jar=libs/poi-ooxml-full-5.2.3.jar
 file.reference.poi-ooxml-lite-5.2.3.jar=libs/poi-ooxml-lite-5.2.3.jar
 file.reference.poi-scratchpad-5.2.3.jar=libs/poi-scratchpad-5.2.3.jar
+file.reference.slf4j-api-1.7.36.jar=libs/slf4j-api-1.7.36.jar
 file.reference.SparseBitSet-1.2.jar=libs/SparseBitSet-1.2.jar
 file.reference.spring-security-crypto-5.8.5.jar=libs/spring-security-crypto-5.8.5.jar
+file.reference.xml-apis-1.4.01.jar=libs/xml-apis-1.4.01.jar
+file.reference.xml-apis-ext-1.3.04.jar=libs/xml-apis-ext-1.3.04.jar
+file.reference.xmlbeans-5.1.1.jar=libs/xmlbeans-5.1.1.jar
+file.reference.xmlgraphics-commons-2.6.jar=libs/xmlgraphics-commons-2.6.jar
+file.reference.xmlsec-3.0.0.jar=libs/xmlsec-3.0.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=10-web
-j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.7-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.9-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote-ffm.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.batik-anim-1.14.jar}:\
+    ${file.reference.batik-awt-util-1.14.jar}:\
+    ${file.reference.batik-bridge-1.14.jar}:\
+    ${file.reference.batik-codec-1.14.jar}:\
+    ${file.reference.batik-constants-1.14.jar}:\
+    ${file.reference.batik-css-1.14.jar}:\
+    ${file.reference.batik-dom-1.14.jar}:\
+    ${file.reference.batik-ext-1.14.jar}:\
+    ${file.reference.batik-gvt-1.14.jar}:\
+    ${file.reference.batik-i18n-1.14.jar}:\
+    ${file.reference.batik-parser-1.14.jar}:\
+    ${file.reference.batik-script-1.14.jar}:\
+    ${file.reference.batik-shared-resources-1.14.jar}:\
+    ${file.reference.batik-svg-dom-1.14.jar}:\
+    ${file.reference.batik-svggen-1.14.jar}:\
+    ${file.reference.batik-svgrasterizer-1.14.jar}:\
+    ${file.reference.batik-transcoder-1.14.jar}:\
+    ${file.reference.batik-util-1.14.jar}:\
+    ${file.reference.batik-xml-1.14.jar}:\
+    ${file.reference.bcpkix-jdk15on-1.70.jar}:\
+    ${file.reference.bcprov-jdk15on-1.70.jar}:\
+    ${file.reference.bcutil-jdk15on-1.70.jar}:\
     ${file.reference.commons-codec-1.15.jar}:\
     ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
     ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.curvesapi-1.07.jar}:\
+    ${file.reference.fontbox-2.0.26.jar}:\
+    ${file.reference.graphics2d-0.40.jar}:\
     ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.jackson-databind-2.10.0.jar}:\
     ${file.reference.jakarta.activation-2.0.1.jar}:\
@@ -80,6 +142,7 @@ javac.classpath=\
     ${file.reference.jakarta.servlet-api-4.0.4.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.jakarta.xml.bind-api-3.0.1.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.jjwt-api-0.12.3.jar}:\
     ${file.reference.jjwt-impl-0.12.3.jar}:\
@@ -90,6 +153,7 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-12.4.2.jre11.jar}:\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
     ${file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar}:\
+    ${file.reference.pdfbox-2.0.26.jar}:\
     ${file.reference.poi-5.2.3.jar}:\
     ${file.reference.poi-examples-5.2.3.jar}:\
     ${file.reference.poi-excelant-5.2.3.jar}:\
@@ -98,7 +162,13 @@ javac.classpath=\
     ${file.reference.poi-ooxml-full-5.2.3.jar}:\
     ${file.reference.poi-ooxml-lite-5.2.3.jar}:\
     ${file.reference.poi-scratchpad-5.2.3.jar}:\
-    ${file.reference.spring-security-crypto-5.8.5.jar}
+    ${file.reference.slf4j-api-1.7.36.jar}:\
+    ${file.reference.spring-security-crypto-5.8.5.jar}:\
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.xml-apis-ext-1.3.04.jar}:\
+    ${file.reference.xmlbeans-5.1.1.jar}:\
+    ${file.reference.xmlgraphics-commons-2.6.jar}:\
+    ${file.reference.xmlsec-3.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
